[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/game_over.gd" type="Script" id=1]
[ext_resource path="res://sprites/misc/end_of_game.png" type="Texture" id=2]
[ext_resource path="res://sprites/misc/btn_again_on.png" type="Texture" id=3]
[ext_resource path="res://sprites/misc/btn_again_off.png" type="Texture" id=4]
[ext_resource path="res://sprites/misc/btn_giveup_on.png" type="Texture" id=5]
[ext_resource path="res://sprites/misc/btn_giveup_off.png" type="Texture" id=6]
[ext_resource path="res://sprites/misc/btn_again_sel.png" type="Texture" id=7]
[ext_resource path="res://sprites/misc/btn_giveup_sel.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "reveal"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("end_of_game:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("end_of_game:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 320, 0 ), Vector2( 320, 128 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("try_again:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("giveup:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "focus"
} ]
}

[node name="game_over" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="animation" type="AnimationPlayer" parent="."]
autoplay = "reveal"
anims/reveal = SubResource( 1 )

[node name="try_again" type="TextureButton" parent="."]
margin_left = 48.0
margin_top = 240.0
margin_right = 299.0
margin_bottom = 334.0
focus_neighbour_left = NodePath("../giveup")
focus_neighbour_right = NodePath("../giveup")
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_focused = ExtResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="giveup" type="TextureButton" parent="."]
margin_left = 344.0
margin_top = 240.0
margin_right = 595.0
margin_bottom = 334.0
focus_neighbour_left = NodePath("../try_again")
focus_neighbour_right = NodePath("../try_again")
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_focused = ExtResource( 8 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="end_of_game" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 320, 128 )
scale = Vector2( 0.864486, 0.864486 )
texture = ExtResource( 2 )

[connection signal="pressed" from="try_again" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="giveup" to="." method="_on_giveup_pressed"]
